[package]
name = "lora-sensor-simulator"
version = "0.1.0"
authors = ["Ethan Zhang <bluefurbear@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serialport = { version = "3.3", default-features = false }
chrono = "0.4"
rand = "0.7"